# eclipse-news

./: .gitignore  README.md  alembic.ini  docker-compose.yml  main.py  plan.md  pyproject.toml
.cursor/rules/: best_practices.mdc  guidelines.mdc  project.mdc  tailwind.mdc
.windsurf/rules/: best_practices.md  django.md  guidelines.md  llms.md  project.md  vitest-testing.md
app/: config.py  database.py  main.py  schemas.py
app/routers/: news.py  sites.py
app/services/: scraping.py
backend/: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  plan.md  pyproject.toml  run_scraper.py
backend/app/: README.md  config.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: __init__.py  news.py  sites.py
backend/app/services/: scraping.py  scraping_core.py
backend/app/services/scrape/: base.py  cnn.py  globo.py  livecoins.py  metropoles.py  poder360.py  uol.py  veja.py
backend/app/utils/: __init__.py  time_range.py
backend/migrations/: env.py
backend/migrations/versions/: 5675c65a68f1_create_sites_and_news.py
backend/tests/: test_scrape_base.py  test_scrape_cnn.py  test_scrape_globo.py  test_scrape_livecoins.py  test_scrape_metropoles.py  test_scrape_poder360.py  test_scrape_uol.py  test_scrape_veja.py
frontend/: package-lock.json  package.json
frontend/src/: main.ts  styles.css
frontend/src/app/: app.config.ts  app.css  app.html  app.ts
frontend/src/app/components/shared/news-list/: news-list.component.html  news-list.component.ts
frontend/src/app/components/shared/site-filter/: site-filter.component.html  site-filter.component.ts
frontend/src/app/core/services/: news.service.ts
frontend/src/app/model/: news.model.ts  site.model.ts
frontend/src/app/news/: news-list.component.ts  site-filter.component.ts
frontend/src/app/screens/home/: home.html  home.ts
frontend/src/app/services/: news.service.ts
frontend/src/environments/: environment.ts
scripts/: asimov_news.py  log_config.py  site.py  utils.py
src/: site.py
