[project]
name = "asimov-news"
version = "0.1.0"
description = "Extrator de notícias"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "pytimedinput>=2.0.1",
    "requests>=2.32.3",
]

[tool.ruff]
line-length = 88

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "ruff>=0.14.7",
    "types-requests>=2.32.4.20250913",
]
