[project]
name = "asimov-news"
version = "0.1.0"
description = "Extrator de notícias"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "pytimedinput>=2.0.1",
    "requests>=2.32.3",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
]

[tool.ruff]
line-length = 88

[tool.mypy]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "ruff>=0.14.7",
    "types-requests>=2.32.4.20250913",
    "alembic>=1.13.0",
]
